--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -15,32 +15,32 @@
       
       <div class="header">
         <div class="header-avatar">
-          <img class="--avatar" src="./image/ok.jpg" alt="" />
+          <img class="avatar" src="./images/ok.jpg" alt="" />
         </div>
         <div class="header-title">
-          <div class="header-title--name">Nguyen Van Quan</div>
-          <div class="header-title--name">Full-stack Development</div>
+          <div class="title__name">Nguyen Van Quan</div>
+          <div class="title__name">Full-stack Development</div>
         </div>
       </div>
 
       <div class="content">
         <div class="content-left">
-          <div class="content-left--card"></div>
+          <div class="left__card"></div>
 
-          <div class="content-left--card"></div>
+          <div class="left__card"></div>
 
-          <div class="content-left--card"></div>
+          <div class="left__card"></div>
 
-          <div class="content-left--card"></div>
+          <div class="left__card"></div>
         </div>
         <div class="content-right">
-          <div class="content-right--card"></div>
+          <div class="right__card"></div>
 
-          <div class="content-right--card"></div>
+          <div class="right__card"></div>
 
-          <div class="content-right--card"></div>
+          <div class="right__card"></div>
 
-          <div class="content-right--card"></div>
+          <div class="right__card"></div>
         </div>
       </div>
 
